[tool.poetry]
name = "thelogrus"
version = "0.6.3"
license = "Apache 2.0"
description = "The Logrus is a collection of random utility functions"
authors = ["Joe Block <jpb@unixorn.net>"]
homepage = "https://github.com/unixorn/thelogrus"
repository = "https://github.com/unixorn/thelogrus"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyaml = "^21.10.1"
dateutils = "^0.6.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
human-time = "thelogrus.time:human_time_converter"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/unixorn/thelogrus/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
